--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
 		"chokidar": "^3.3.1"
 	},
 	"dependencies": {
-		"@bull-board/api": "5.6.0",
-		"@bull-board/ui": "5.6.0",
-		"@napi-rs/cli": "^2.16.1",
+		"@bull-board/api": "5.10.2",
+		"@bull-board/ui": "5.10.2",
+		"@napi-rs/cli": "^2.17.0",
 		"@tensorflow/tfjs": "^3.21.0",
 		"js-yaml": "4.1.0",
 		"seedrandom": "^3.0.5"
@@ -57,7 +57,7 @@
 		"gulp-replace": "1.1.4",
 		"gulp-terser": "2.1.0",
 		"install-peers": "^1.0.4",
-		"rome": "^v12.1.3-nightly.f65b0d9",
+		"rome": "^12.1.3",
 		"start-server-and-test": "1.15.2",
 		"typescript": "5.1.6"
 	}
