--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,34 +25,34 @@
 		"@tensorflow/tfjs-node": "3.21.1"
 	},
 	"dependencies": {
-		"@bull-board/api": "5.6.0",
-		"@bull-board/koa": "5.6.0",
-		"@bull-board/ui": "5.6.0",
-		"@discordapp/twemoji": "14.1.2",
-		"@elastic/elasticsearch": "7.17.0",
+		"@bull-board/api": "5.10.2",
+		"@bull-board/koa": "5.10.2",
+		"@bull-board/ui": "5.10.2",
+		"@discordapp/twemoji": "^15.0.2",
+		"@elastic/elasticsearch": "7.17.13",
 		"@koa/cors": "3.4.3",
 		"@koa/multer": "3.0.2",
-		"@koa/router": "9.0.1",
+		"@koa/router": "9.4.0",
 		"@peertube/http-signature": "1.7.0",
-		"@redocly/openapi-core": "1.0.0-beta.131",
+		"@redocly/openapi-core": "1.5.0",
 		"@sinonjs/fake-timers": "9.1.2",
-		"@syuilo/aiscript": "0.11.1",
-		"@tensorflow/tfjs": "^4.2.0",
+		"@syuilo/aiscript": "0.16.0",
+		"@tensorflow/tfjs": "^3.21.0",
 		"adm-zip": "^0.5.10",
 		"ajv": "8.12.0",
-		"archiver": "5.3.1",
-		"argon2": "^0.30.3",
+		"archiver": "5.3.2",
+		"argon2": "^0.31.2",
 		"autolinker": "4.0.0",
 		"autwh": "0.1.0",
-		"aws-sdk": "2.1413.0",
-		"axios": "^1.4.0",
+		"aws-sdk": "2.1515.0",
+		"axios": "^1.6.2",
 		"bcryptjs": "2.4.3",
 		"blurhash": "2.0.5",
-		"bull": "4.10.4",
+		"bull": "4.11.5",
 		"cacheable-lookup": "7.0.0",
 		"cbor": "8.1.0",
 		"chalk": "5.3.0",
-		"chalk-template": "0.4.0",
+		"chalk-template": "0.5.0",
 		"chokidar": "^3.5.3",
 		"cli-highlight": "2.1.11",
 		"color-convert": "2.0.1",
@@ -65,17 +65,17 @@
 		"file-type": "17.1.6",
 		"goblin-js": "workspace:*",
 		"fluent-ffmpeg": "2.1.2",
-		"got": "12.5.3",
+		"got": "12.6.1",
 		"gunzip-maybe": "^1.4.2",
 		"hpagent": "0.1.2",
 		"ioredis": "5.3.2",
 		"ip-cidr": "3.1.0",
-		"is-svg": "4.3.2",
+		"is-svg": "4.4.0",
 		"js-yaml": "4.1.0",
-		"jsdom": "20.0.3",
+		"jsdom": "23.0.1",
 		"json5": "2.2.3",
-		"jsonld": "8.2.0",
-		"jsrsasign": "10.8.6",
+		"jsonld": "8.3.2",
+		"jsrsasign": "10.9.0",
 		"koa": "2.14.2",
 		"koa-body": "^6.0.1",
 		"koa-bodyparser": "4.4.1",
@@ -88,118 +88,118 @@
 		"koa-slow": "2.1.0",
 		"koa-views": "7.0.2",
 		"megalodon": "workspace:*",
-		"meilisearch": "0.33.0",
+		"meilisearch": "0.36.0",
 		"mfm-js": "0.23.3",
 		"mime-types": "2.1.35",
-		"msgpackr": "1.9.5",
-		"multer": "1.4.4-lts.1",
+		"msgpackr": "1.10.0",
+		"multer": "1.4.5-lts.1",
 		"native-utils": "link:native-utils",
 		"nested-property": "4.0.0",
-		"node-fetch": "3.3.1",
-		"nodemailer": "6.9.3",
+		"node-fetch": "3.3.2",
+		"nodemailer": "6.9.7",
 		"nsfwjs": "2.4.2",
 		"oauth": "^0.10.0",
 		"os-utils": "0.0.14",
-		"otpauth": "^9.1.3",
+		"otpauth": "^9.2.1",
 		"parse5": "7.1.2",
-		"pg": "8.11.1",
+		"pg": "^8.11.3",
 		"private-ip": "2.3.4",
 		"probe-image-size": "7.2.3",
 		"promise-limit": "2.7.0",
-		"punycode": "2.3.0",
-		"pureimage": "0.3.15",
+		"punycode": "2.3.1",
+		"pureimage": "0.4.13",
 		"qrcode": "1.5.3",
 		"qs": "6.11.2",
 		"random-seed": "0.3.0",
 		"ratelimiter": "3.4.1",
-		"re2": "1.19.1",
+		"re2": "1.20.9",
 		"redis-lock": "0.1.4",
-		"redis-semaphore": "5.3.1",
-		"reflect-metadata": "0.1.13",
+		"redis-semaphore": "5.5.0",
+		"reflect-metadata": "0.1.14",
 		"rename": "1.0.4",
 		"rndstr": "1.0.0",
 		"rss-parser": "3.13.0",
-		"sanitize-html": "2.10.0",
+		"sanitize-html": "2.11.0",
 		"seedrandom": "^3.0.5",
 		"semver": "7.5.4",
-		"sharp": "0.32.1",
+		"sharp": "0.33.0",
 		"sonic-channel": "^1.3.1",
 		"stringz": "2.1.0",
 		"summaly": "2.7.0",
 		"syslog-pro": "1.0.0",
-		"systeminformation": "5.17.17",
+		"systeminformation": "5.21.20",
 		"tar-stream": "^3.1.6",
 		"tesseract.js": "^3.0.3",
-		"tinycolor2": "1.5.2",
+		"tinycolor2": "1.6.0",
 		"tmp": "0.2.1",
 		"tumblr.js": "^4.0.1",
-		"twemoji-parser": "14.0.0",
-		"typeorm": "0.3.17",
+		"twemoji-parser": "^14.0.0",
+		"typeorm": "^0.3.17",
 		"ulid": "2.3.0",
-		"uuid": "9.0.0",
-		"web-push": "3.6.3",
+		"uuid": "9.0.1",
+		"web-push": "3.6.6",
 		"websocket": "1.0.34",
 		"xev": "3.0.2"
 	},
 	"devDependencies": {
-		"@swc/cli": "^0.1.62",
-		"@swc/core": "^1.3.68",
-		"@types/adm-zip": "^0.5.0",
-		"@types/bcryptjs": "2.4.2",
-		"@types/cbor": "6.0.0",
-		"@types/escape-regexp": "0.0.1",
-		"@types/fluent-ffmpeg": "2.1.21",
-		"@types/js-yaml": "4.0.5",
-		"@types/jsdom": "21.1.1",
-		"@types/jsonld": "1.5.9",
-		"@types/jsrsasign": "10.5.8",
-		"@types/koa": "2.13.6",
-		"@types/koa-bodyparser": "4.3.10",
-		"@types/koa-cors": "0.0.2",
-		"@types/koa-favicon": "2.0.21",
-		"@types/koa-logger": "3.1.2",
-		"@types/koa-mount": "4.0.2",
-		"@types/koa-send": "4.1.3",
-		"@types/koa-views": "7.0.0",
-		"@types/koa__cors": "3.3.0",
-		"@types/koa__multer": "2.0.4",
-		"@types/koa__router": "8.0.11",
-		"@types/mocha": "9.1.1",
-		"@types/node": "18.11.18",
-		"@types/node-fetch": "3.0.3",
-		"@types/nodemailer": "6.4.8",
-		"@types/oauth": "0.9.1",
-		"@types/probe-image-size": "^7.2.0",
-		"@types/pug": "2.0.6",
-		"@types/punycode": "2.1.0",
-		"@types/qrcode": "1.5.1",
-		"@types/qs": "6.9.7",
-		"@types/random-seed": "0.3.3",
-		"@types/ratelimiter": "3.4.4",
-		"@types/redis": "4.0.11",
-		"@types/rename": "1.0.4",
-		"@types/sanitize-html": "2.9.0",
-		"@types/semver": "7.5.0",
-		"@types/sinonjs__fake-timers": "8.1.2",
-		"@types/tinycolor2": "1.4.3",
-		"@types/tmp": "0.2.3",
-		"@types/uuid": "9.0.2",
-		"@types/web-push": "3.3.2",
-		"@types/websocket": "1.0.5",
-		"@types/ws": "8.5.5",
-		"cross-env": "7.0.3",
-		"eslint": "^8.44.0",
-		"execa": "6.1.0",
-		"json5-loader": "4.0.1",
-		"mocha": "10.2.0",
-		"pug": "3.0.2",
-		"strict-event-emitter-types": "2.0.0",
+		"@swc/cli": "^0.1.63",
+		"@swc/core": "^1.3.100",
+		"@types/adm-zip": "^0.5.5",
+		"@types/bcryptjs": "^2.4.6",
+		"@types/cbor": "^6.0.0",
+		"@types/escape-regexp": "^0.0.3",
+		"@types/fluent-ffmpeg": "^2.1.24",
+		"@types/js-yaml": "^4.0.9",
+		"@types/jsdom": "^21.1.6",
+		"@types/jsonld": "^1.5.13",
+		"@types/jsrsasign": "^10.5.12",
+		"@types/koa": "^2.13.12",
+		"@types/koa-bodyparser": "^4.3.12",
+		"@types/koa-cors": "^0.0.6",
+		"@types/koa-favicon": "^2.1.3",
+		"@types/koa-logger": "^3.1.5",
+		"@types/koa-mount": "^4.0.5",
+		"@types/koa-send": "^4.1.6",
+		"@types/koa-views": "^7.0.0",
+		"@types/koa__cors": "^3.3.1",
+		"@types/koa__multer": "^2.0.7",
+		"@types/koa__router": "^8.0.11",
+		"@types/mocha": "^9.1.1",
+		"@types/node": "^20.10.4",
+		"@types/node-fetch": "^3.0.3",
+		"@types/nodemailer": "^6.4.14",
+		"@types/oauth": "^0.9.4",
+		"@types/probe-image-size": "^7.2.4",
+		"@types/pug": "^2.0.10",
+		"@types/punycode": "^2.1.3",
+		"@types/qrcode": "^1.5.5",
+		"@types/qs": "^6.9.10",
+		"@types/random-seed": "^0.3.5",
+		"@types/ratelimiter": "^3.4.6",
+		"@types/redis": "^4.0.11",
+		"@types/rename": "^1.0.7",
+		"@types/sanitize-html": "^2.9.5",
+		"@types/semver": "^7.5.6",
+		"@types/sinonjs__fake-timers": "^8.1.5",
+		"@types/tinycolor2": "^1.4.6",
+		"@types/tmp": "^0.2.6",
+		"@types/uuid": "^9.0.7",
+		"@types/web-push": "^3.6.3",
+		"@types/websocket": "^1.0.10",
+		"@types/ws": "^8.5.10",
+		"cross-env": "^7.0.3",
+		"eslint": "^8.55.0",
+		"execa": "^6.1.0",
+		"json5-loader": "^4.0.1",
+		"mocha": "^10.2.0",
+		"pug": "^3.0.2",
+		"strict-event-emitter-types": "^2.0.0",
 		"swc-loader": "^0.2.3",
-		"ts-loader": "9.4.4",
-		"ts-node": "10.9.1",
-		"tsconfig-paths": "4.2.0",
-		"typescript": "5.1.6",
-		"webpack": "^5.88.1",
-		"ws": "8.13.0"
+		"ts-loader": "^9.5.1",
+		"ts-node": "^10.9.2",
+		"tsconfig-paths": "^4.2.0",
+		"typescript": "^5.3.3",
+		"webpack": "^5.89.0",
+		"ws": "^8.15.0"
 	}
 }
