--- a/packages/goblin-js/package.json
+++ b/packages/goblin-js/package.json
@@ -21,20 +21,20 @@
 		"url": "https://git.joinfirefish.org/firefish/firefish.git"
 	},
 	"devDependencies": {
-		"@microsoft/api-extractor": "^7.36.0",
-		"@microsoft/api-documenter": "^7.22.21",
-		"@swc/cli": "^0.1.62",
-		"@swc/core": "^1.3.62",
-		"@types/jest": "^27.4.0",
-		"@types/node": "20.3.1",
-		"jest": "^27.4.5",
+		"@microsoft/api-extractor": "^7.38.5",
+		"@microsoft/api-documenter": "^7.23.14",
+		"@swc/cli": "^0.1.63",
+		"@swc/core": "^1.3.100",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^20.10.4",
+		"jest": "^27.5.1",
 		"jest-fetch-mock": "^3.0.3",
-		"jest-websocket-mock": "^2.2.1",
-		"mock-socket": "^9.0.8",
-		"ts-jest": "^27.1.2",
-		"ts-node": "10.4.0",
-		"tsd": "^0.28.1",
-		"typescript": "5.1.3"
+		"jest-websocket-mock": "^2.5.0",
+		"mock-socket": "^9.3.1",
+		"ts-jest": "^27.1.5",
+		"ts-node": "^10.9.2",
+		"tsd": "^0.29.0",
+		"typescript": "^5.3.3"
 	},
 	"files": [
 		"built"
@@ -42,7 +42,7 @@
 	"dependencies": {
 		"eventemitter3": "^4.0.7",
 		"reconnecting-websocket": "^4.4.0",
-		"semver": "^7.3.8"
+		"semver": "^7.5.4"
 	},
 	"optionalDependencies": {
 		"@swc/core-android-arm64": "1.3.11"
