--- a/packages/megalodon/package.json
+++ b/packages/megalodon/package.json
@@ -34,46 +34,46 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "@types/oauth": "^0.9.0",
-    "@types/ws": "^8.5.4",
-    "axios": "1.2.2",
-    "dayjs": "^1.11.7",
+    "@types/oauth": "^0.9.4",
+    "@types/ws": "^8.5.10",
+    "axios": "1.6.2",
+    "dayjs": "^1.11.10",
     "form-data": "^4.0.0",
     "https-proxy-agent": "^5.0.1",
     "oauth": "^0.10.0",
     "object-assign-deep": "^0.4.0",
     "parse-link-header": "^2.0.0",
     "socks-proxy-agent": "^7.0.0",
-    "typescript": "4.9.4",
-    "uuid": "^9.0.0",
-    "ws": "8.12.0",
+    "typescript": "^5.3.3",
+    "uuid": "^9.0.1",
+    "ws": "8.15.0",
     "async-lock": "1.4.0"
   },
   "devDependencies": {
-    "@types/core-js": "^2.5.0",
+    "@types/core-js": "^2.5.8",
     "@types/form-data": "^2.5.0",
-    "@types/jest": "^29.4.0",
-    "@types/object-assign-deep": "^0.4.0",
-    "@types/parse-link-header": "^2.0.0",
-    "@types/uuid": "^9.0.0",
-		"@types/node": "18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.49.0",
-    "@typescript-eslint/parser": "^5.49.0",
-    "@types/async-lock": "1.4.0",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
+    "@types/jest": "^29.5.11",
+    "@types/object-assign-deep": "^0.4.3",
+    "@types/parse-link-header": "^2.0.3",
+    "@types/uuid": "^9.0.7",
+		"@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@types/async-lock": "1.4.2",
+    "eslint": "^8.55.0",
+    "eslint-config-prettier": "^8.10.0",
     "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-standard": "^5.0.0",
-    "jest": "^29.4.0",
-    "jest-worker": "^29.4.0",
-    "lodash": "^4.17.14",
-    "prettier": "^2.8.3",
-    "ts-jest": "^29.0.5",
-    "typedoc": "^0.23.24"
+    "jest": "^29.7.0",
+    "jest-worker": "^29.7.0",
+    "lodash": "^4.17.21",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.1",
+    "typedoc": "^0.25.4"
   },
   "directories": {
     "lib": "lib",
