--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,7 +22,7 @@
 	},
 	"optionalDependencies": {
 		"@swc/core-android-arm64": "1.3.11",
-		"@tensorflow/tfjs-node": "3.21.1"
+		"@tensorflow/tfjs-node": "^4.17.0"
 	},
 	"dependencies": {
 		"@bull-board/api": "5.6.0",
@@ -99,7 +99,7 @@
 		"node-fetch": "3.3.1",
 		"node-html-parser": "^6.1.12",
 		"nodemailer": "6.9.3",
-		"nsfwjs": "2.4.2",
+		"nsfwjs": "^4.1.0",
 		"oauth": "^0.10.0",
 		"os-utils": "0.0.14",
 		"otpauth": "^9.1.3",
@@ -200,8 +200,8 @@
 		"ts-loader": "9.4.4",
 		"ts-node": "10.9.1",
 		"tsconfig-paths": "4.2.0",
-		"typescript": "5.1.6",
-		"webpack": "^5.88.1",
+		"typescript": "^5.4.2",
+		"webpack": "^5.90.3",
 		"ws": "8.13.0"
 	}
 }
