--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -44,7 +44,7 @@
 		"compare-versions": "6.0.0",
 		"cropperjs": "2.0.0-beta.2",
 		"cross-env": "7.0.3",
-		"cypress": "10.11.0",
+		"cypress": "^13.6.6",
 		"date-fns": "2.30.0",
 		"emojilib": "github:thatonecalculator/emojilib",
 		"escape-regexp": "0.0.1",
