--- a/packages/firefish-js/package.json
+++ b/packages/firefish-js/package.json
@@ -25,16 +25,16 @@
 		"@microsoft/api-documenter": "^7.22.21",
 		"@swc/cli": "^0.1.62",
 		"@swc/core": "^1.3.62",
-		"@types/jest": "^27.4.0",
+		"@types/jest": "^29.5.12",
 		"@types/node": "20.3.1",
-		"jest": "^27.4.5",
+		"jest": "^29.7.0",
 		"jest-fetch-mock": "^3.0.3",
 		"jest-websocket-mock": "^2.2.1",
 		"mock-socket": "^9.0.8",
-		"ts-jest": "^27.1.2",
+		"ts-jest": "^29.1.2",
 		"ts-node": "10.4.0",
 		"tsd": "^0.28.1",
-		"typescript": "5.1.3"
+		"typescript": "^5.4.2"
 	},
 	"files": [
 		"built"
