--- a/docs/kubernetes/goblin-all-in-one.yaml
+++ b/docs/kubernetes/goblin-all-in-one.yaml
@@ -236,7 +236,7 @@ kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/cors-allow-headers: DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,X-Device,
-      X-App, cbAuth, Login_Session_Id, User_Id
+      X-App, Login_Session_Id, User_Id
     nginx.ingress.kubernetes.io/cors-allow-origin: '*'
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
